--- a/ferro.vcxproj.filters
+++ b/ferro.vcxproj.filters
@@ -107,5 +107,8 @@
     <ClInclude Include="Spring.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Box.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
