--- a/ferro.vcxproj.filters
+++ b/ferro.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="ForceSphere.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="marchingCubes.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="camera.h">
@@ -117,6 +120,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ForceSphere.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="marchingCubes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
